--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -64,6 +64,13 @@
 /* ============================= */
 /* ============================= */
 
+.chart {
+  display: inline-block;
+  background: #4285F4;
+  width: 20px;
+  margin-right: 3px;
+}
+
 body {
   background-color: #fce9fc;
 }
