--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://use.fontawesome.com/e97bfa3b0a.js"></script>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+  <script src="https://d3js.org/d3.v4.min.js"></script>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 
   <style>
   body,h1,h2,h3,h4,h5,h6 {
@@ -18,7 +19,7 @@
 
   <body>
     <!-- About Section -->
-    <div class="coverpage">
+    <div id="chart"></div>
       <div class="container-fluid" style="padding:100px 16px" id="about">
         <center>
           <h1 class="welcome-message"> Welcome to Codeology! </h1>
@@ -116,6 +117,8 @@
         </div>
       </div>
     </div>
-
+    <div>
+      <%= render "test" %>
+    </div>
   </body>
 </html>
