--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -31,15 +31,17 @@
     <%= f.password_field :password_confirmation %>
   </div>
 
-  <div class="field">
-    <%= f.label :title %>
-    <%= f.text_field :title %>
-  </div>
+  <% if user_is_logged_in? %>
+    <div class="field">
+      <%= f.label :title %>
+      <%= f.text_field :title %>
+    </div>
 
-  <div class="field">
-    <%= f.label :bio %>
-    <%= f.text_field :bio %>
-  </div>
+    <div class="field">
+      <%= f.label :bio %>
+      <%= f.text_field :bio %>
+    </div>
+  <% end %>
 
   <div class="actions">
     <%= f.submit %>
