--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -6,6 +6,9 @@
         <%= link_to_nav_item "Home", root_path, :class => "nav-link" %>
       </li>
       <!-- put calendar link here -->
+      <li class="nav-item">
+        <%= link_to_nav_item "Calendar", calendar_path, :class => "nav-link" %>
+      </li>
       <% if user_is_logged_in? %>
         <li class="nav-item">
           <% if current_user.is_admin %>
